--- a/SoTayCanBo/project.properties
+++ b/SoTayCanBo/project.properties
@@ -12,4 +12,5 @@
 
 # Project target.
 target=android-21
-android.library.reference.1=../../../../VDC/mCA_SMS/Lib Menu/android-v7-appcompat
+android.library.reference.1=..\\..\\..\\..\\VDC\\mCA_SMS\\Lib Menu\\android-v7-appcompat
+android.library.reference.2=../../../../VDC/mCA_SMS/Lib Menu/LibModule
