--- a/SoTayCanBo/.settings/org.eclipse.core.resources.prefs
+++ b/SoTayCanBo/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/com/hou/sotaycanbo/FragmentManagerActivity.java=UTF-8
+encoding//src/com/hou/sotaycanbo/SplashActivity.java=UTF-8
