--- a/SoTayCanBo/AndroidManifest.xml
+++ b/SoTayCanBo/AndroidManifest.xml
@@ -11,9 +11,17 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+
+
+    <permission
+        android:name="com.hmkcode.android.gcm.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="com.hmkcode.android.gcm.permission.C2D_MESSAGE" />
 
     <application
         android:allowBackup="true"
@@ -58,7 +66,17 @@
         </activity>
         <activity
             android:name=".CanboActivity"
-            android:label="@string/title_activity_canbo"
+            android:label="@string/canboActivity_title"
+            android:theme="@style/CustomActionBarTheme" >
+        </activity>
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <activity
+            android:name=".DoiMatkhauActivity"
+            android:label="@string/title_activity_doi_matkhau"
             android:theme="@style/CustomActionBarTheme" >
         </activity>
     </application>
