--- a/SoTayCanBo/AndroidManifest.xml
+++ b/SoTayCanBo/AndroidManifest.xml
@@ -16,7 +16,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <permission
         android:name="com.hmkcode.android.gcm.permission.C2D_MESSAGE"
@@ -71,6 +71,18 @@
             android:theme="@style/CustomActionBarTheme" >
         </activity>
 
+        <receiver
+            android:name="com.hou.gcm.GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+
+                <category android:name="com.hmkcode.android.gcm" />
+            </intent-filter>
+        </receiver>
+
+        <service android:name="com.hou.gcm.GcmMessageHandler" />
+        
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
