--- a/SoTayCanBo/AndroidManifest.xml
+++ b/SoTayCanBo/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hou.sotaycanbo"
-    android:versionCode="2"
-    android:versionName="1.0.1" >
+    android:versionCode="5"
+    android:versionName="1.0.4" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -17,12 +17,11 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="com.hmkcode.android.gcm.permission.C2D_MESSAGE" />
 
     <permission
         android:name="com.hmkcode.android.gcm.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
-
-    <uses-permission android:name="com.hmkcode.android.gcm.permission.C2D_MESSAGE" />
 
     <application
         android:allowBackup="true"
@@ -102,6 +101,16 @@
             android:name=".CreateEventActivity"
             android:label="@string/title_activity_sukien"
             android:theme="@style/CustomActionBarTheme" >
+        </activity>
+        <activity
+            android:name=".CalendarDetailActivity"
+            android:label="@string/title_activity_calendar_detail"
+            android:theme="@style/CustomActionBarTheme" >
+        </activity>
+        <activity
+            android:name=".HelpActivity"
+            android:label="@string/title_activity_help" 
+            android:theme="@style/CustomActionBarTheme">
         </activity>
     </application>
 
